--- a/index.html
+++ b/index.html
@@ -17,6 +17,16 @@
 
 		<section id="one" class="post style1">
 			<div class="image">
+				<div class="inner promo">
+					<strong>In Issue 119:</strong> 
+					<ul>
+						<li>What starting API design questions should I ask?</li>
+						<li>Why isn't API style selection best left to producers? And what does Paris have to do with it?</li>
+						<li>What naming conventions avoid breaking changes?</li>
+					</ul>
+					<p>That and more in <a href="https://tinyletter.com/NetAPINotes/letters/net-api-notes-for-2020-01-24-mailbag-issue-119" target="_blank">the 1/24 Net API notes: MAILBAG EDITION</a>.</p>
+					<p><a href="https://tinyletter.com/NetAPINotes/archive" target="_blank">View the Archive</a></p>
+				</div>
 				<div class="inner signup">
 				<form action="https://tinyletter.com/NetAPINotes" method="post" target="popupwindow" onsubmit="window.open('https://tinyletter.com/NetAPINotes', 'popupwindow', 'scrollbars=yes,width=800,height=600');return true">
 					<ul><li><strong>No Ads</strong></li>
@@ -24,9 +34,9 @@
 						<li>Just a passion for great APIs</li>
 					</ul>
 					<p><label for="tlemail"><em>Subscribe today!</em></label></p><p><input type="text" name="email" id="tlemail" placeholder="your_name@example.com"/></p><input type="hidden" value="1" name="embed"/><input type="submit" value="Subscribe" />
-					<p><a href="https://tinyletter.com/NetAPINotes/archive" target="_blank">View the Archive</a></p>
 				</form>
 				</div>
+
 			</div>
 			<div class="content">
 				<div class="inner">
