update teaser for issue 120

--- a/index.html
+++ b/index.html
@@ -18,13 +18,13 @@
 		<section id="one" class="post style1">
 			<div class="image">
 				<div class="inner promo">
-					<strong>In Issue 119:</strong> 
+					<strong>In Issue 120:</strong> 
 					<ul>
-						<li>What starting API design questions should I ask?</li>
-						<li>Why isn't API style selection best left to producers? And what does Paris have to do with it?</li>
-						<li>What naming conventions avoid breaking changes?</li>
+						<li>Microservice Failure Modes from the Experts</li>
+						<li>API Security Models</li>
+						<li>API Mocking with Prism and Postman</li>
 					</ul>
-					<p>That and more in <a href="https://tinyletter.com/NetAPINotes/letters/net-api-notes-for-2020-01-24-mailbag-issue-119" target="_blank">the 1/24 Net API notes: MAILBAG EDITION</a>.</p>
+					<p>That and more in <a href="https://tinyletter.com/NetAPINotes/letters/net-api-notes-for-2020-02-06-issue-120" target="_blank">the 1/24 Net API notes: MAILBAG EDITION</a>.</p>
 					<p><a href="https://tinyletter.com/NetAPINotes/archive" target="_blank">View the Archive</a></p>
 				</div>
 				<div class="inner signup">
