updated index to refer to the latest issue of the newsletter

--- a/index.html
+++ b/index.html
@@ -18,13 +18,14 @@
 		<section id="one" class="post style1">
 			<div class="image">
 				<div class="inner promo">
-					<strong>In Issue 120:</strong> 
+					<strong>In Issue 125:</strong> 
 					<ul>
-						<li>Microservice Failure Modes from the Experts</li>
-						<li>API Security Models</li>
-						<li>API Mocking with Prism and Postman</li>
+						<li>Covering the 'New Normal' of Technical Conferences</li>
+						<li>Mike Solomon on API mocking</li>
+						<li>Bill Doerrfeld convenes a GraphQL round-table</li>
+						<li>We review a Romain Huet video on Stripe API Design</li>
 					</ul>
-					<p>That and more in <a href="https://tinyletter.com/NetAPINotes/letters/net-api-notes-for-2020-02-06-issue-120" target="_blank">the 1/24 Net API notes: MAILBAG EDITION</a>.</p>
+					<p>That and more in <a href="https://tinyletter.com/NetAPINotes/letters/net-api-notes-for-2020-03-25-issue-125" target="_blank">the 3/25 Net API notes newsletter</a>.</p>
 					<p><a href="https://tinyletter.com/NetAPINotes/archive" target="_blank">View the Archive</a></p>
 				</div>
 				<div class="inner signup">
