update for issue 126

--- a/index.html
+++ b/index.html
@@ -18,14 +18,13 @@
 		<section id="one" class="post style1">
 			<div class="image">
 				<div class="inner promo">
-					<strong>In Issue 125:</strong> 
+					<strong>In this COVID Watch Party Issue 126:</strong> 
 					<ul>
-						<li>Covering the 'New Normal' of Technical Conferences</li>
-						<li>Mike Solomon on API mocking</li>
-						<li>Bill Doerrfeld convenes a GraphQL round-table</li>
-						<li>We review a Romain Huet video on Stripe API Design</li>
+						<li>API Author, Sam Newman, discusses startups and Microservices </li>
+						<li>Science educator Tom Scott moves me to tears over Yahoo Pipes (among other things)</li>
+						<li>A Parody of Your Contentious Microservice Scrum</li>
 					</ul>
-					<p>That and more in <a href="https://tinyletter.com/NetAPINotes/letters/net-api-notes-for-2020-03-25-issue-125" target="_blank">the 3/25 Net API notes newsletter</a>.</p>
+					<p>That and more in <a href="https://tinyletter.com/NetAPINotes/letters/net-api-notes-for-2020-04-07-issue-126-covid-watch-party-edition" target="_blank">the 4/7 Net API notes newsletter</a>.</p>
 					<p><a href="https://tinyletter.com/NetAPINotes/archive" target="_blank">View the Archive</a></p>
 				</div>
 				<div class="inner signup">
