--- a/index.html
+++ b/index.html
@@ -18,13 +18,13 @@
 		<section id="one" class="post style1">
 			<div class="image">
 				<div class="inner promo">
-					<strong>In this COVID Watch Party Issue 126:</strong> 
+					<strong>In the 127th Issue:</strong> 
 					<ul>
-						<li>API Author, Sam Newman, discusses startups and Microservices </li>
-						<li>Science educator Tom Scott moves me to tears over Yahoo Pipes (among other things)</li>
-						<li>A Parody of Your Contentious Microservice Scrum</li>
+						<li>DHH, Vaugh Vernon, and More React to Uber's 'Macroservices'</li>
+						<li>How to get $2500 in Distributed Systems Training for <em>free</em></li>
+						<li>Apple and Google Announce a Contract Tracing API</li>
 					</ul>
-					<p>That and more in <a href="https://tinyletter.com/NetAPINotes/letters/net-api-notes-for-2020-04-07-issue-126-covid-watch-party-edition" target="_blank">the 4/7 Net API notes newsletter</a>.</p>
+					<p>That and more in <a href="https://tinyletter.com/NetAPINotes/letters/net-api-notes-for-2020-04-14-issue-127-uber-s-macroservice-move" target="_blank">the 4/14 Net API notes newsletter</a>.</p>
 					<p><a href="https://tinyletter.com/NetAPINotes/archive" target="_blank">View the Archive</a></p>
 				</div>
 				<div class="inner signup">
