update for issue 135

--- a/index.html
+++ b/index.html
@@ -18,13 +18,13 @@
 		<section id="one" class="post style1">
 			<div class="image">
 				<div class="inner promo">
-					<strong>In the 127th Issue:</strong> 
+					<strong>In the 135th Issue:</strong> 
 					<ul>
-						<li>DHH, Vaugh Vernon, and More React to Uber's 'Macroservices'</li>
-						<li>How to get $2500 in Distributed Systems Training for <em>free</em></li>
-						<li>Apple and Google Announce a Contract Tracing API</li>
+						<li>OWASP's Top 10 API Security Vulnerabilities</li>
+						<li>Scott Middleton Uses Jobs-to-be-Done for Better APIs</li>
+						<li>Nick Tune identifies not one, not two, but FOURTEEN different ways you could get more value from Event Storming</li>
 					</ul>
-					<p>That and more in <a href="https://tinyletter.com/NetAPINotes/letters/net-api-notes-for-2020-04-14-issue-127-uber-s-macroservice-move" target="_blank">the 4/14 Net API notes newsletter</a>.</p>
+					<p>That and more in <a href="https://tinyletter.com/NetAPINotes/letters/net-api-notes-for-2020-06-26-issue-135" target="_blank">the 6/26 Net API notes newsletter</a>.</p>
 					<p><a href="https://tinyletter.com/NetAPINotes/archive" target="_blank">View the Archive</a></p>
 				</div>
 				<div class="inner signup">
