--- a/index.html
+++ b/index.html
@@ -18,13 +18,13 @@
 		<section id="one" class="post style1">
 			<div class="image">
 				<div class="inner promo">
-					<strong>In the 135th Issue:</strong> 
+					<strong>In the 141st Issue:</strong> 
 					<ul>
-						<li>OWASP's Top 10 API Security Vulnerabilities</li>
-						<li>Scott Middleton Uses Jobs-to-be-Done for Better APIs</li>
-						<li>Nick Tune identifies not one, not two, but FOURTEEN different ways you could get more value from Event Storming</li>
+						<li>How to Launch an API Product</li>
+						<li>Sam Newman, Microservices, and Streaming Data Stores</li>
+						<li>The History of the HTTP Status Code, and Why It Matters</li>
 					</ul>
-					<p>That and more in <a href="https://tinyletter.com/NetAPINotes/letters/net-api-notes-for-2020-06-26-issue-135" target="_blank">the 6/26 Net API notes newsletter</a>.</p>
+					<p>That and more in <a href="https://tinyletter.com/NetAPINotes/letters/net-api-notes-for-2020-09-09-issue-141" target="_blank">the 9/9 Net API notes newsletter</a>.</p>
 					<p><a href="https://tinyletter.com/NetAPINotes/archive" target="_blank">View the Archive</a></p>
 				</div>
 				<div class="inner signup">
