--- a/index.html
+++ b/index.html
@@ -17,16 +17,20 @@
 
 		<section id="one" class="post style1">
 			<div class="image">
-				<div class="inner promo">
-					<strong>In the 141st Issue:</strong> 
-					<ul>
-						<li>How to Launch an API Product</li>
-						<li>Sam Newman, Microservices, and Streaming Data Stores</li>
-						<li>The History of the HTTP Status Code, and Why It Matters</li>
-					</ul>
-					<p>That and more in <a href="https://tinyletter.com/NetAPINotes/letters/net-api-notes-for-2020-09-09-issue-141" target="_blank">the 9/9 Net API notes newsletter</a>.</p>
-					<p><a href="https://tinyletter.com/NetAPINotes/archive" target="_blank">View the Archive</a></p>
-				</div>
+<div class="inner promo">
+    <strong>In the 142st Issue:</strong> 
+    <p>It is a veritable collection of API architectural stars in this mailbag on Conway's Law and microservices! There's reference to:</p>
+    <ul>
+        <li>Ruth Malan</li>
+        <li>Grady Booch</li>
+        <li>Nick Tune</li>
+        <li>Mike Amundsen</li>
+        <li>And many, many, more!</li>
+    </ul>
+    <p>That and more in <a href="https://tinyletter.com/NetAPINotes/letters/net-api-notes-for-2020-09-22-mailbag-ii-issue-142" target="_blank">the 9/22 Net API notes newsletter</a>.</p>
+    <p><a href="https://tinyletter.com/NetAPINotes/archive" target="_blank">View the Archive</a></p>
+</div>
+
 				<div class="inner signup">
 				<form action="https://tinyletter.com/NetAPINotes" method="post" target="popupwindow" onsubmit="window.open('https://tinyletter.com/NetAPINotes', 'popupwindow', 'scrollbars=yes,width=800,height=600');return true">
 					<ul><li><strong>No Ads</strong></li>
