--- a/index.html
+++ b/index.html
@@ -18,18 +18,16 @@
 		<section id="one" class="post style1">
 			<div class="image">
 <div class="inner promo">
-    <strong>In the 142st Issue:</strong> 
-    <p>It is a veritable collection of API architectural stars in this mailbag on Conway's Law and microservices! There's reference to:</p>
+    <strong>In the 144th Issue:</strong> 
     <ul>
-        <li>Ruth Malan</li>
-        <li>Grady Booch</li>
-        <li>Nick Tune</li>
-        <li>Mike Amundsen</li>
-        <li>And many, many, more!</li>
+        <li>I recap a very fine breakdown of what it's like to hack Apple.</li>
+        <li>Because API hacking is trending upward, Cloudflare release a new service, API Shield.</li>
+        <li>Kent Beck talks about how moving to microservices is neither quick nor easy.</li>
     </ul>
-    <p>That and more in <a href="https://tinyletter.com/NetAPINotes/letters/net-api-notes-for-2020-09-22-mailbag-ii-issue-142" target="_blank">the 9/22 Net API notes newsletter</a>.</p>
+    <p>That and more in <a href="https://tinyletter.com/NetAPINotes/letters/net-api-notes-for-2020-10-23-issue-144" target="_blank">the 10/23 Net API notes newsletter</a>.</p>
     <p><a href="https://tinyletter.com/NetAPINotes/archive" target="_blank">View the Archive</a></p>
-</div>
+
+				</div>
 
 				<div class="inner signup">
 				<form action="https://tinyletter.com/NetAPINotes" method="post" target="popupwindow" onsubmit="window.open('https://tinyletter.com/NetAPINotes', 'popupwindow', 'scrollbars=yes,width=800,height=600');return true">
