--- a/index.html
+++ b/index.html
@@ -18,16 +18,15 @@
 		<section id="one" class="post style1">
 			<div class="image">
 <div class="inner promo">
-    <strong>In the 144th Issue:</strong> 
+    <strong>In the 150th Issue:</strong> 
     <ul>
-        <li>I recap a very fine breakdown of what it's like to hack Apple.</li>
-        <li>Because API hacking is trending upward, Cloudflare release a new service, API Shield.</li>
-        <li>Kent Beck talks about how moving to microservices is neither quick nor easy.</li>
+        <li>Stripe Recaps TEN YEARS of APIs</li>
+        <li>Why SaaS Companies Should Not Treat Their API as a Feature </li>
+        <li>API Security Amateur Hour at Parler</li>
     </ul>
-    <p>That and more in <a href="https://tinyletter.com/NetAPINotes/letters/net-api-notes-for-2020-10-23-issue-144" target="_blank">the 10/23 Net API notes newsletter</a>.</p>
+    <p>That and more in <a href="https://tinyletter.com/NetAPINotes/letters/net-api-notes-for-2021-01-12-issue-150" target="_blank">the 1/13 Net API notes newsletter</a>.</p>
     <p><a href="https://tinyletter.com/NetAPINotes/archive" target="_blank">View the Archive</a></p>
-
-				</div>
+</div>
 
 				<div class="inner signup">
 				<form action="https://tinyletter.com/NetAPINotes" method="post" target="popupwindow" onsubmit="window.open('https://tinyletter.com/NetAPINotes', 'popupwindow', 'scrollbars=yes,width=800,height=600');return true">
