--- a/index.html
+++ b/index.html
@@ -17,25 +17,24 @@
 
 		<section id="one" class="post style1">
 			<div class="image">
-<div class="inner promo">
-    <strong>In the 150th Issue:</strong> 
-    <ul>
-        <li>Stripe Recaps TEN YEARS of APIs</li>
-        <li>Why SaaS Companies Should Not Treat Their API as a Feature </li>
-        <li>API Security Amateur Hour at Parler</li>
-    </ul>
-    <p>That and more in <a href="https://tinyletter.com/NetAPINotes/letters/net-api-notes-for-2021-01-12-issue-150" target="_blank">the 1/13 Net API notes newsletter</a>.</p>
-    <p><a href="https://tinyletter.com/NetAPINotes/archive" target="_blank">View the Archive</a></p>
-</div>
+				<div class="inner promo">
+					<strong>In the 161st Issue:</strong> 
+					<ul>
+						<li>John Musser on API Trends</li>
+						<li>APIDeck Summarizes Pagination Styles</li>
+						<li>Experian and Peloton Breaches in Review</li>
+					</ul>
+					<p>That and more in <a href="https://tinyletter.com/NetAPINotes/letters/net-api-notes-for-2021-05-05-issue-161" target="_blank">the 5/5 Net API notes newsletter</a>.</p>
+					<p><a href="https://tinyletter.com/NetAPINotes/archive" target="_blank">View the Archive</a></p>
+				</div>
+				
 
 				<div class="inner signup">
-				<form action="https://tinyletter.com/NetAPINotes" method="post" target="popupwindow" onsubmit="window.open('https://tinyletter.com/NetAPINotes', 'popupwindow', 'scrollbars=yes,width=800,height=600');return true">
 					<ul><li><strong>No Ads</strong></li>
 						<li><strong>No Info Selling</strong></li>
 						<li>Just a passion for great APIs</li>
 					</ul>
-					<p><label for="tlemail"><em>Subscribe today!</em></label></p><p><input type="text" name="email" id="tlemail" placeholder="your_name@example.com"/></p><input type="hidden" value="1" name="embed"/><input type="submit" value="Subscribe" />
-				</form>
+					<p><em><a href="https://tinyletter.com/NetAPINotes">Subscribe today on the Tinyletter website!</a></em></p>
 				</div>
 
 			</div>
