--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
 						<li><strong>No Info Selling</strong></li>
 						<li>Just a passion for great APIs</li>
 					</ul>
-					<p><em><a href="https://tinyletter.com/NetAPINotes">Subscribe today on the Tinyletter website!</a></em></p>
+					<p><a href="https://tinyletter.com/NetAPINotes"><button><em>Subscribe today on the Tinyletter website!</em></button></a></p>
 				</div>
 
 			</div>
