--- a/index.html
+++ b/index.html
@@ -17,16 +17,16 @@
 
 		<section id="one" class="post style1">
 			<div class="image">
-				<div class="inner promo">
-					<strong>In the 161st Issue:</strong> 
-					<ul>
-						<li>John Musser on API Trends</li>
-						<li>APIDeck Summarizes Pagination Styles</li>
-						<li>Experian and Peloton Breaches in Review</li>
-					</ul>
-					<p>That and more in <a href="https://tinyletter.com/NetAPINotes/letters/net-api-notes-for-2021-05-05-issue-161" target="_blank">the 5/5 Net API notes newsletter</a>.</p>
-					<p><a href="https://tinyletter.com/NetAPINotes/archive" target="_blank">View the Archive</a></p>
-				</div>
+<div class="inner promo">
+    <strong>In the 165th Issue:</strong> 
+    <ul>
+        <li>Quantifying schema entropy in #OpenAPI descriptions</li>
+        <li>What's the difference between event and message driven architectures?</li>
+        <li>An introduction to systems thinking and why it matters</li>
+    </ul>
+    <p>That and more in <a href="https://tinyletter.com/NetAPINotes/letters/net-api-notes-for-2021-06-10-issue-165" target="_blank">the 6/10 Net API notes newsletter</a>.</p>
+    <p><a href="https://tinyletter.com/NetAPINotes/archive" target="_blank">View the Archive</a></p>
+</div>
 				
 
 				<div class="inner signup">
