--- a/index.html
+++ b/index.html
@@ -18,13 +18,13 @@
 		<section id="one" class="post style1">
 			<div class="image">
 <div class="inner promo">
-    <strong>In the 165th Issue:</strong> 
+    <strong>In the 170th Issue:</strong> 
     <ul>
-        <li>Quantifying schema entropy in #OpenAPI descriptions</li>
-        <li>What's the difference between event and message driven architectures?</li>
-        <li>An introduction to systems thinking and why it matters</li>
+        <li>Why Google Pledging Not To Break API Things Matters</li>
+        <li>An API Testing Hierarchy of Needs Proposal</li>
+        <li>How Twitter Manages GraphQL In Their Platform</li>
     </ul>
-    <p>That and more in <a href="https://tinyletter.com/NetAPINotes/letters/net-api-notes-for-2021-06-10-issue-165" target="_blank">the 6/10 Net API notes newsletter</a>.</p>
+    <p>That and more in <a href="https://tinyletter.com/NetAPINotes/letters/net-api-notes-for-2021-08-04-issue-170" target="_blank">the 8/04 Net API notes newsletter</a>.</p>
     <p><a href="https://tinyletter.com/NetAPINotes/archive" target="_blank">View the Archive</a></p>
 </div>
 				
