--- a/index.html
+++ b/index.html
@@ -18,15 +18,15 @@
 		<section id="one" class="post style1">
 			<div class="image">
 <div class="inner promo">
-    <strong>In the 174th Issue, I have a bit of a walkabout regarding API design, architectural opinion, and complexity. In the process, I feature:</strong> 
+    <strong>In the 182nd Issue:</strong> 
     <ul>
-        <li>The API Handyman and His Opinions on Reviewer Opinions</li>
-        <li>Stephen Mizell's API Design Complexity Work</li>
-        <li>Hany Elemary's Provocation that Booleans Should Be Considered Harmful</li>
+        <li>API-Mocking to Parallelize Work</li>
+        <li>Five Most Common Security Mistakes</li>
+        <li>Mapping API Ecosystem for Improvement</li>
     </ul>
-    <p>That and more in <a href="https://tinyletter.com/NetAPINotes/letters/net-api-notes-for-2021-09-08-issue-174-design-is-a-process" target="_blank">the 9/8 Net API notes newsletter</a>.</p>
+    <p>That and more in <a href="https://tinyletter.com/NetAPINotes/letters/net-api-notes-for-2021-11-17-issue-182" target="_blank">the 11/18 Net API notes newsletter</a>.</p>
     <p><a href="https://tinyletter.com/NetAPINotes/archive" target="_blank">View the Archive</a></p>
-</div>				
+</div>
 
 				<div class="inner signup">
 					<ul><li><strong>No Ads</strong></li>
